--- a/login-project/views/index.html
+++ b/login-project/views/index.html
@@ -3,53 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=h, initial-scale=1.0">
     <title>Document</title>
-    <style>
-label, input {
-    display: block;
-}
-
-label {
-    margin-top: 20px;
-    margin-left: 20px;
-    margin-bottom: 20px;
-}
-</style>
 </head>
 <body>
-
-    
-        <div>
-            <h1>Register</h1>
-            <form action="#" method="post">
-                <label for="name">Name
-                <input type="text" name="name" required>
-                 </label>
-                <label for="email">Email
-                <input type="email" name="email" required>
-                </label>
-                <label for="pwd">Password
-                <input type="password" required>
-            </label>
-                <div>
-                    <label for="gender">Male
-                    <input type="radio" name="gender" value="male" checked>
-                    </label>
-                    <label for="gender">Female
-                    <input type="radio" name="gender" value="female">
-                    </label>
-                </div>
-                <label for="image">Image
-                <input type="file"
-                    id="image" name="image"
-                    accept="image/png, image/jpeg">
-                </label>
-                <label for="button">
-                    <input type="button" value="Register">
-                </label>
-            </form>
-        </div>
-    
+    <h1>Welcome</h1>
+    <div>
+        <p><b>New user?</b></p>
+        <a href="/register">Register</a>
+        <a href="#">Login</a>
+    </div>
 </body>
 </html>
