--- a/login-project/views/register.html
+++ b/login-project/views/register.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-label, input {
+label , input {
     display: block;
 }
 
-label {
+form , label {
     margin-top: 20px;
     margin-left: 20px;
     margin-bottom: 20px;
@@ -19,37 +19,38 @@ label {
 </head>
 <body>
 
-    
-        <div>
             <h1>Register</h1>
             <form action="/submit" method="POST">
-                <label for="name">Name
-                <input type="text" name="name" required>
-                 </label>
-                <label for="email">Email
-                <input type="email" name="email" required>
+
+                <label for="name">First Name
+                       <input type="text" name="Fname" required>
                 </label>
-                <label for="pwd">Password
-                <input type="password" required>
-            </label>
-                <div>
+                <label for="name">Last Name
+                    <input type="text" name="Lname" required>
+               </label>
+                   <label for="email">Email
+                       <input type="email" name="email" required>
+                   </label>
+                   <label for="pwd">Password
+                       <input type="password" required>
+                   </label>
+
                     <label for="gender">Male
                     <input type="radio" name="gender" value="male" checked>
                     </label>
                     <label for="gender">Female
                     <input type="radio" name="gender" value="female">
                     </label>
-                </div>
-                <label for="image">Image
-                <input type="file"
-                    id="image" name="image"
-                    accept="image/png, image/jpeg">
-                </label>
-                <label for="button">
-                    <input type="submit" value="Register">
-                </label>
+                    <label for="image">Image
+                        <input type="file"
+                               id="image" name="image"
+                               accept="image/png, image/jpeg">
+                    </label>
+                    <label for="button">
+                        <input type="submit" value="Register">
+                    </label>
             </form>
-        </div>
+
     
 </body>
 </html>
