--- a/login-project/views/index.html
+++ b/login-project/views/index.html
@@ -11,7 +11,7 @@
     <div>
         <p><b>New user?</b></p>
         <a href="/register">Register</a>
-        <a href="#">Login</a>
+        <a href="/login">Login</a>
     </div>
 </body>
 </html>
