--- a/login-project/views/register.html
+++ b/login-project/views/register.html
@@ -32,7 +32,7 @@ form , label {
                        <input type="email" name="email" required>
                    </label>
                    <label for="pwd">Password
-                       <input type="password" required>
+                       <input type="password"  name="password" required>
                    </label>
 
                     <label for="gender">Male
