--- a/login-project/views/register.html
+++ b/login-project/views/register.html
@@ -20,7 +20,7 @@ form , label {
 <body>
 
             <h1>Register</h1>
-            <form action="/submit" method="POST">
+            <form action="/submit"  enctype="multipart/form-data" method="POST">
 
                 <label for="name">First Name
                        <input type="text" name="Fname" required>
