--- a/login-project/views/login.html
+++ b/login-project/views/login.html
@@ -20,7 +20,7 @@
 <body>
 
 <h1>Login</h1>
-<form action="/check" method="POST">
+<form action="/authenticate" method="POST">
   <label for="email">Email
     <input type="email" name="email" required>
   </label>
