--- a/login-project/views/welcome.html
+++ b/login-project/views/welcome.html
@@ -23,6 +23,7 @@
     {{.Path}}
     <img src="/picture/profile_Pranto3515602357.jpg" alt="/picture/profile_prova3684369978.png" width="500" height="500">
  </ol>
- <button><a href="/update" target="_blank">New Member</a> </button>
+ <button><a href="/update" >New Member</a> </button>
+ <button><a href="/logout" >New Member</a> </button>
 </body>
 </html>
