--- a/login-project/views/login.html
+++ b/login-project/views/login.html
@@ -21,17 +21,15 @@
 
 <h1>Login</h1>
 <form action="/authenticate" method="POST">
-  <label for="email">Email
+  <label>Email
     <input type="email" name="email" required>
   </label>
-  <label for="pwd">Password
+  <label >Password
     <input type="password" name="password" required>
   </label>
-  <label for="button">
+  <label >
     <input type="submit" value="Login">
   </label>
 </form>
-
-
 </body>
 </html>
