--- a/login-project/views/welcome.html
+++ b/login-project/views/welcome.html
@@ -40,9 +40,52 @@
           </tr>
         </tbody>
       </table>
+<table class="table">
+   <thead class="thead-dark">
+   <tr>
+       <th>Sender</th>
+       <th>Receiver</th>
+       <th>Nonce</th>
+       <th>Difficulty</th>
+       <th>TimeStamp</th>
+       <th>Hash</th>
+   </tr>
+   </thead>
+    <tbody>
+    <tr>
+        <td id="sender"></td>
+        <td id="receiver"></td>
+        <td id="nonce"></td>
+        <td id="difficulty"></td>
+        <td id="timestamp"></td>
+        <td id="hash"></td>
+    </tr>
+    </tbody>
+</table>
+        <pre id="blockData"></pre>
      <button type="button" class="btn btn-danger"><a href="/logout" >Logout</a></button>
      <button type="button" class="btn btn-info"><a href="/update" >Edit</a></button>
+     <button type="button" id="block" class="btn btn-info">Block</button>
+     <button type="button" name="showBlocks" class="btn btn-info"><a href="/search/{{.Email}}" target="_blank">Show Blocks</a></button>
+<button type="button" name="showBlocks" class="btn btn-info"><a href="/search" target="_blank">Decode Hash</a></button>
+     <script>
+         async function getData() {
+             const response = await fetch("/block/{{.Email}}");
+             console.log(response)
+             var data = await response.json();
+             console.log(data);
+             document.getElementById("sender").innerHTML =data.Sender;
+             document.getElementById("receiver").innerHTML =data.Receiver;
+             document.getElementById("hash").innerHTML =data.Hash;
+             document.getElementById("nonce").innerHTML =data.Nonce;
+             document.getElementById("difficulty").innerHTML =data.Difficulty;
+             document.getElementById("timestamp").innerHTML =data.Timestamp;
 
+         }
+         //todo convert into string then to an array 
+         document.getElementById("block").addEventListener("click",getData);
+
+     </script>
 
 </body>
 </html>
